// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Server DevServerPlugin add hot option 1`] = `
Array [
  Array [
    "client",
    "default",
    "index.js?http:",
    "0.0.0.0",
  ],
  Array [
    "node_modules",
    "webpack",
    "hot",
    "dev-server.js",
  ],
  Array [
    "foo.js",
  ],
]
`;

exports[`Server DevServerPlugin add hot-only option 1`] = `
Array [
  Array [
    "client",
    "default",
    "index.js?http:",
    "0.0.0.0",
  ],
  Array [
    "node_modules",
    "webpack",
    "hot",
    "only-dev-server.js",
  ],
  Array [
    "foo.js",
  ],
]
`;
